# sparse_solver

./: CMakeLists.txt  Evaluate_benchmarks.py  Matrix_visualisation.py  README.md  run_benchmarks.sh
CMakeModules/: FindViennaCL.cmake
include/: CMakeLists.txt
src/: CMakeLists.txt  benchmark.cpp  benchmark.cu
