foreach(PROG benchmark)
    file(GLOB ${PROG}_SOURCES ${PROG}*.cu)
    if(USE_CUDA)
        cuda_add_executable(${PROG} ${${PROG}_SOURCES})
    else()
        add_executable(${PROG} ${${PROG}_SOURCES})
    endif()
    target_link_libraries(${PROG} OpenMP::OpenMP_CXX Eigen3::Eigen amgcl::amgcl)
    if(USE_CUDA)
        target_link_libraries(${PROG} ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES} ${CUDA_cusparse_LIBRARY})
    endif()
endforeach()

